# python-selenium

./: .gitignore  .pre-commit-config.yaml  .pylintrc  README.md  pyproject.toml  sonar-project.properties
.github/workflows/: python3.yml
scripts/: install.sh  pre-push.sh
tests/: blog.py
