[tool.poetry]
name = "python-selenium"
version = "0.1.0"
description = ""
authors = ["Alex Andrade"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
selenium = "^4.23.1"

[tool.poetry.group.dev.dependencies]
pre-commit = "^3.8.0"
black = "^24.8.0"
pylint = "^3.2.6"
pysonar-scanner = "^0.1.0.340"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
test = "tests.blog:main"
